--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-hook-form": "^7.53.1",
     "react-pdf-html": "^2.0.5",
     "react-qrcode": "^0.3.6",
+    "react-responsive": "^10.0.1",
     "recharts": "^2.13.2",
     "sonner": "^1.5.0",
     "superjson": "^2.2.1",
