--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.10",
     "generate-vcard": "^1.5.0",
     "iconsax-react": "^0.0.8",
     "inngest": "^3.25.0",
